--- a/client/src/app/projecte/components/joc/joc.component.html
+++ b/client/src/app/projecte/components/joc/joc.component.html
@@ -1,35 +1,44 @@
 
+
+
+
 <div id="joc">
-    <table id="taulell1">
-        <tr *ngFor="let fila of this.taula1.getFiles() ; let i = index">
-            <td *ngFor="let casella of fila.getCaselles() ; let j = index" [ngClass]="(casella.informativa)? '': casella.color ">
-                <div *ngIf="casella.informativa">
-                    <p> {{casella.fila}} {{casella.columna}}</p>
-                </div>
 
-                <div *ngIf="casella.figura">
-                    <img src="{{this.baseHref}}assets/imatges/{{this.casella.figura}}" height="20px" width="20px">
-                </div>
-            </td>
-        </tr>
-    </table>
+    <h1>Joc</h1>
 
-    <br>
-    <br>
 
-    <table id="taulell2">
-        <tr *ngFor="let fila of this.taula2.getFiles() ; let i = index">
-            <td *ngFor="let casella of fila.getCaselles() ; let j = index" [ngClass]="(casella.informativa)? '': casella.color ">
-                <div *ngIf="casella.informativa">
-                    <p> {{casella.fila}} {{casella.columna}}</p>
-                </div>
 
-                <div *ngIf="casella.figura">
-                    <img src="{{this.baseHref}}assets/imatges/{{this.casella.figura}}" height="20px" width="20px">
-                </div>
-                    
-            </td>
-        </tr>
-    </table>
+        <div id="taulells">
+            <table id="taulell1">
+                <tr *ngFor="let fila of this.taula1.getFiles() ; let i = index">
+                    <td *ngFor="let casella of fila.getCaselles() ; let j = index" [ngClass]="(casella.informativa)? '': casella.color ">
+                        <div *ngIf="casella.informativa">
+                            <p> {{casella.fila}} {{casella.columna}}</p>
+                        </div>
+
+                        <div *ngIf="casella.figura">
+                            <img src="{{this.baseHref}}assets/imatges/{{this.casella.figura}}" height="20px" width="20px">
+                        </div>
+                    </td>
+                </tr>
+            </table>
+
+            <br>
+            <br>
+
+            <table id="taulell2">
+                <tr *ngFor="let fila of this.taula2.getFiles() ; let i = index">
+                    <td *ngFor="let casella of fila.getCaselles() ; let j = index" [ngClass]="(casella.informativa)? '': casella.color ">
+                        <div *ngIf="casella.informativa">
+                            <p> {{casella.fila}} {{casella.columna}}</p>
+                        </div>
+
+                        <div *ngIf="casella.figura">
+                            <img src="{{this.baseHref}}assets/imatges/{{this.casella.figura}}" height="20px" width="20px">
+                        </div>
+                            
+                    </td>
+                </tr>
+            </table>
+        </div>
 </div>
-
