--- a/client/src/app/projecte/components/joc/joc.component.css
+++ b/client/src/app/projecte/components/joc/joc.component.css
@@ -4,7 +4,7 @@ table,tr,td{
 
 td{
     text-align: center;
-    width: 40px;
+    width: 50px;
 }
 
 .marroClar{
@@ -24,4 +24,8 @@ td{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+img:not([src]){
+    opacity : 0;
 }
