--- a/client/src/app/projecte/components/joc/joc.component.html
+++ b/client/src/app/projecte/components/joc/joc.component.html
@@ -1,53 +1,62 @@
 <div id="joc">
-    <h1>Joc</h1> 
+    <h1>Joc</h1>
     <button (click)="this.jugar()"> jugar </button>
-    <div id="taulells">
 
-        <div id="t1">
-            <div class="cementiri">
-                <img *ngFor="let figuraMorta of this.taula1.getFiguresMortes('black')" src="{{this.rutaImatges}}{{figuraMorta}}">
+    <h2 *ngIf="this.iniciarNoms">Navegador de - {{this.jugador.nom}} </h2>
+
+    <div *ngIf="this.comensar">
+
+        <div id="taulells">
+            <div id="t1">
+                <div class="cementiri">
+                    <img *ngFor="let figuraMorta of this.taula1.getFiguresMortes('black')"
+                        src="{{this.rutaImatges}}{{figuraMorta}}">
+                </div>
+
+                <table>
+                    <tr *ngFor="let fila of this.taula1.getFiles() ; let i = index">
+                        <td (dragover)="dragOver($event)" (drop)="drop($event , casella , 'taulell1')"
+                            *ngFor="let casella of fila.getCaselles() ; let j = index"
+                            [ngClass]="(casella.informativa)? '': casella.color ">
+                            <div *ngIf="casella.informativa">
+                                <p> {{casella.fila}} {{casella.columna}}</p>
+                            </div>
+
+
+                            <img (dragstart)="drag($event , casella , 'taulell1')" draggable="true"
+                                *ngIf="casella.figura" src="{{this.rutaImatges}}{{this.casella.figura}}" width="30px">
+                        </td>
+                    </tr>
+                </table>
+                <div class="cementiri">
+                    <img *ngFor="let figuraMorta of this.taula1.getFiguresMortes('white')"
+                        src="{{this.rutaImatges}}{{figuraMorta}}">
+                </div>
             </div>
 
-            <table>
-                <tr *ngFor="let fila of this.taula1.getFiles() ; let i = index">
-                    <td (dragover)="dragOver($event)" (drop)="drop($event , casella , 'taula1')"
-                        *ngFor="let casella of fila.getCaselles() ; let j = index"
-                        [ngClass]="(casella.informativa)? '': casella.color ">
-                        <div *ngIf="casella.informativa">
-                            <p> {{casella.fila}} {{casella.columna}}</p>
-                        </div>
 
-
-                        <img (dragstart)="drag($event , casella , 'taula1')" draggable="true" *ngIf="casella.figura"
-                            src="{{this.rutaImatges}}{{this.casella.figura}}" width="30px">
-                    </td>
-                </tr>
-            </table>
-            <div class="cementiri">
-                <img *ngFor="let figuraMorta of this.taula1.getFiguresMortes('white')"  src="{{this.rutaImatges}}{{figuraMorta}}">
-            </div>
-        </div>
-        
-
-        <div id="t2">
-            <div class="cementiri">
-                <img *ngFor="let figuraMorta of this.taula2.getFiguresMortes('white')"  src="{{this.rutaImatges}}{{figuraMorta}}">
-            </div>
-            <table>
-                <tr *ngFor="let fila of this.taula2.getFiles() ; let i = index">
-                    <td (dragover)="dragOver($event)" (drop)="drop($event , casella , 'taula2')"
-                        *ngFor="let casella of fila.getCaselles() ; let j = index"
-                        [ngClass]="(casella.informativa)? '': casella.color ">
-                        <div *ngIf="casella.informativa">
-                            <p> {{casella.fila}} {{casella.columna}}</p>
-                        </div>
-                        <img (dragstart)="drag($event , casella , 'taula2')" draggable="true" *ngIf="casella.figura"
-                            src="{{this.rutaImatges}}{{this.casella.figura}}">
-                    </td>
-                </tr>
-            </table>
-            <div class="cementiri">
-                <img *ngFor="let figuraMorta of this.taula2.getFiguresMortes('black')"  src="{{this.rutaImatges}}{{figuraMorta}}">
+            <div id="t2">
+                <div class="cementiri">
+                    <img *ngFor="let figuraMorta of this.taula2.getFiguresMortes('white')"
+                        src="{{this.rutaImatges}}{{figuraMorta}}">
+                </div>
+                <table>
+                    <tr *ngFor="let fila of this.taula2.getFiles() ; let i = index">
+                        <td (dragover)="dragOver($event)" (drop)="drop($event , casella , 'taulell2')"
+                            *ngFor="let casella of fila.getCaselles() ; let j = index"
+                            [ngClass]="(casella.informativa)? '': casella.color ">
+                            <div *ngIf="casella.informativa">
+                                <p> {{casella.fila}} {{casella.columna}}</p>
+                            </div>
+                            <img (dragstart)="drag($event , casella , 'taulell2')" draggable="true"
+                                *ngIf="casella.figura" src="{{this.rutaImatges}}{{this.casella.figura}}">
+                        </td>
+                    </tr>
+                </table>
+                <div class="cementiri">
+                    <img *ngFor="let figuraMorta of this.taula2.getFiguresMortes('black')"
+                        src="{{this.rutaImatges}}{{figuraMorta}}">
+                </div>
             </div>
         </div>
     </div>
